<resources>
    <string name="app_name">DataHive</string>
    <!-- Onboarding screens -->
    <string name="TODO">TODO</string>
    <string name="logo_description">DataHive Logo</string>
    <string name="first_screen_title_text">Monitor Your Usage</string>
    <string name="first_screen_description_text">Stay informed about how much data you\'re using on both mobile and Wi-Fi networks.</string>
    <string name="second_screen_title_text">Real-Time Data Tracking</string>
    <string name="second_description_text">Get instant updates on your data consumption to help you make informed decisions.</string>
    <string name="third_screen_title_text">Usage History</string>
    <string name="third_screen_description_text">Review your past data usage patterns and identify trends over time.</string>
    <string name="skip">Skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--New string Block -->
    <string name="email">Email</string>
    <string name="e_mail">Enter email</string>
    <string name="reg_tag">Create your account here</string>
    <string name="password">Enter Password</string>
    <string name="Register">Create account</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="log_tag">Sign in using your account</string>
    <string name="log">Login</string>
    <string name="forgot_password">Forgot password? Click here to reset</string>
    <string name="cn_password">Confirm password</string>
    <string name="red_tag">Already have an account? Sign in here</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="datahive_web_client_id">240319580783-971ais510s91o54502ergibh2iaeo7mv.apps.googleusercontent.com</string>
    <string name="update">UPDATE</string>
    <string name="username">Username</string>
    <string name="create_an_account_first">Create an account first</string>

    <!--Getting started screen-->
    <string name="lobby_title">Welcome to DataHive!</string>
    <string name="lobby_description">Effortlessly track how you consume data, ensuring you make the most of your plans and avoid any surprises.</string>
    <string name="lobby_button">Get Started</string>
    <string name="create_account">Create an Account Here</string>

    <string name="dataUsage">Data Usage</string>
    <string name="mbs">10 Mbs</string>
    <string name="login_tag">Login here</string>
    <string name="reset_email_btn">Reset password</string>
    <string name="reset_email_tx">Enter Password</string>
    <string name="reset_tag">Reset Password</string>
    <string name="profile">Profile</string>
    <string name="system_apps">System Apps</string>
    <string name="sign_out">Sign out</string>
    <string name="report_tag">Send Report</string>

    <!--Network Library-->
    <string name="full_month_data_usages">This Month</string>
    <string name="today_data_usage">Data Usage Today</string>
    <string name="wifi">WiFI</string>
    <string name="mobile">Mobile</string>
    <string name="last_30_days">Last 30 Days</string>
    <string name="top_apps">App Usage</string>
    <string name="total_mobile">Mobile</string>
    <string name="wifi_total">WiFi</string>
    <string name="totals">Total</string>
    <string name="support_tag"><![CDATA[Help & Support]]></string>
    <string name="search_hint">Search</string>
    <string name="txt_config">Server configurations</string>

    <!--Spinner Items-->
    <string-array name="network_options">
        <item>Wifi</item>
        <item>Mobile</item>
    </string-array>

    <string-array name="app_options">
        <item>System Apps</item>
        <item>Installed Apps</item>
    </string-array>

    <!--Profile page-->
    <string name="user">username</string>
    <string name="last_7_days">Last 7 Days</string>
    <string name="toc_text">Community Guidelines and Legal Policies</string>
    <string name="toc_text_toc">Terms Of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="toc_reads">Please refer to our Terms and Policies</string>
    <string name="accept">Accept Terms and Conditions</string>
    <string name="accept_toc">Please take the time to read through these Policies, Terms and Conditions carefully. If you have any questions or concerns, feel free to contact our support team. By clicking "Accept" below, you signify that you have read, understood, and agreed to be bound by these Terms and Conditions.</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="contact_us">Contact Us</string>
    <string name="account">Account</string>
    <string name="installed_apps">Installed Apps</string>
    <string name="dashboard">Dashboard</string>
    <string name="datahive_logo">DataHive Logo</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="gsm_bandwidth">0 Kib</string>


</resources>