<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".introslider.LobbyFragment">

    <ImageView
        android:id="@+id/lobby_screen_header"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:src="@drawable/hive"
        android:layout_gravity="center"
        android:layout_marginTop="280dp"
        android:contentDescription="@string/datahive_logo"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp"/>
    <TextView
        style="@style/Base.AppTheme"
        android:id="@+id/lobby_screen_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lobby_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/md_theme_light_scrim"
        android:gravity="center"
        android:layout_gravity="center"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="6dp"/>
    <TextView
        style="@style/Base.AppTheme"
        android:id="@+id/lobby_screen_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lobby_description"
        android:gravity="center"
        android:layout_gravity="center"        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="18dp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/get_started_button"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:text="@string/lobby_button"
        android:textStyle="bold"
        android:fontFamily="@font/intervariablefontslntwght"
        android:layout_gravity="center"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="6dp"/>
    <TextView
        android:id="@+id/register_redirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="17sp"
        android:layout_marginStart="25dp"
        android:layout_gravity="center"
        style="@style/Base.AppTheme"
        />

</LinearLayout>