<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bee_yellow"
    android:padding="24dp"
    tools:context=".introslider.FirstScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/skip"
        android:textColor="@color/black"
        android:textSize="12sp"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <ImageView
        android:id="@+id/goals"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:contentDescription="@string/TODO"
        android:src="@drawable/goals" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <TextView
        android:id="@+id/first_screen_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/first_screen_title_text"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="18dp" />

    <TextView
        android:id="@+id/first_screen_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/first_screen_description_text"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="48dp"/>
    <ImageView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_to_right"
        android:layout_gravity="bottom|end"

        android:contentDescription="@string/TODO"/>
</LinearLayout>