<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/md_theme_light_scrim"
    android:padding="24dp"
    tools:context=".introslider.SecondScreen">
    <TextView
        android:id="@+id/second_screen_skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/skip"
        android:textSize="12sp"
        android:textColor="@color/seed"
        android:fontFamily="@font/inter_bold"/>

    <ImageView
        android:id="@+id/add_data"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:src="@drawable/adddata"
        android:contentDescription="@string/TODO"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <TextView
        android:id="@+id/second_screen_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/second_screen_title_text"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/seed"
        android:fontFamily="@font/inter_bold"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="18dp" />

    <TextView
        android:id="@+id/second_screen_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/second_description_text"
        android:textSize="18sp"
        android:textColor="@color/seed"
        android:fontFamily="@font/inter_regular"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="48dp" />
    <ImageView
        android:id="@+id/second_screen_arrow_right"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_to_right_yellow"
        android:layout_gravity="end"
        android:contentDescription="@string/TODO"/>


</LinearLayout>