<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/md_theme_dark_onSurface">
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/navigation_drawer_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/hive"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/navigation_drawer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        android:textColor="?attr/colorOnSurface"
        android:text="@string/app_name"
        android:fontFamily="@font/inter_semibold"/>

    <TextView
        android:id="@+id/navigation_drawer_hub_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textAppearance="?attr/textAppearanceTitleSmall"
        android:textColor="@color/md_theme_light_primary"
        android:text="@string/email"
        android:fontFamily="@font/intervariablefontslntwght"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nav_drawer_signUpRedirect"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/Register"
        android:fontFamily="@font/intervariablefontslntwght"/>
    <com.google.android.material.button.MaterialButton
        style="?attr/materialButtonOutlinedStyle"
        android:id="@+id/nav_drawer_login_redirect"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/login"
        android:fontFamily="@font/intervariablefontslntwght"/>


</LinearLayout>